--- a/views/agb.ejs
+++ b/views/agb.ejs
@@ -51,6 +51,15 @@
 <p>Diese Allgemeinen Geschäftsbedingungen treten am 9. April 2024 in Kraft.</p>
 
 
+
+<form method="post">            
+    <label>Allgemeine Geschäftsbedingungen</label></br>
+    <input type="text" name="Email" value=<%= Email %>>
+    <button type="submit" formaction="/agb">AGBs aufrufen</button>
+</form>                
+<p><%= Meldung %></p>
+
+
     </main>
 
     <footer>
