--- a/views/geldAnlegen.ejs
+++ b/views/geldAnlegen.ejs
@@ -32,7 +32,7 @@
             <label>Gewünschter Betrag in Euro</label></br>
             <!--Das Eingabefeld hat den type number, womit die Eingabe von Zahlen erzwungen wird.-->
             <!--Der Name lautet Betrag. Der Server greift über den Namen auf das Input zu.-->
-            <input type="number" name="Betrag" value=<%= Betrag %>></br>
+            <input type="number" name="Betrag" value=<%= 10 %>></br>
             <label>Gewünschte Laufzeit in Jahren</label></br>
             <input type="number" name="Laufzeit" value=<%= Laufzeit %>></br>
             <!--Die formaction legt fest, dass auf dem Server die app.post('/geldAnlegen') abgearbeitet wird,
