--- a/views/hilfe.ejs
+++ b/views/hilfe.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Die Styles.css muss aus allen HTML-Dateien verlinkt werden-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"/>
+    <!--Es fehlt am Ende ein Schrägstrich-->
     <!--Es gibt im Internet Dienste, die Styles zur Verfügung stellen. Beispiel: font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <title>Borken-Bank - Hilfe</title>
@@ -21,7 +22,8 @@
         <a href="login"><i class="fa fa-sign-out"></i> Abmelden</a>
     </header>
     <main>
-        <h>Kunden-Support - Borken-Bank AG</h>
+        <h1>Kunden-Support - Borken-Bank AG</h1>
+        <!--Die "1" fehlt nach dem "h", weil es eine Überschrift ist-->
 
         <p>Für Unterstützung und Beratung steht Ihnen unser Kundenberater Pit Kiff gerne zur Verfügung.</p>
         
@@ -40,6 +42,8 @@
         <p>Borken-Bank AG</p>
         <p>Geschäftsführer: Hans Dampf, IBAN: DE 55 28 000 000</p>
         <a href="Zur Homepage">https://www.borken-bank.de</a> 
-    <footer>
+        <!--nach dem "a" fehlt eine Leerzeile-->
+    </footer>
+    <!--Bei dem footer muss ein Schrägstrich ergänzt werden-->
 </body>
 </html>
